test/validation/func/test-func-head-invalid-type/p.pas
program test_func_head_invalid_type;
type t = integer;
const c = 1;

procedure p(i, j: c; k, l: t);
    begin
    end;

begin
end.
